# android-xplatform

./: .gitignore  .gitmodules  README.md  build.gradle  libraries.gradle  presentation.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xplatform/app/: MainActivity.java  XPlatformApp.java
app/src/main/java/com/xplatform/lib/: KeyValueStore.java
app/src/main/res/layout/: main_activity.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
xplatform/: .gitignore  CMakeLists.txt  Makefile  xplatform.djinni
xplatform/src/: user_profile_service_impl.cc  user_profile_service_impl.h
